src/player/log
./impl/Player.java:143: error: cannot find symbol
	private Integer[] getAttackFromDB(String attack_name) throws AttackNotFoundException, IOException
	                                                             ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/Player.java:164: error: cannot find symbol
	public float attack(String attack_name) throws AttackNotFoundException, IOException
	                                               ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/Player.java:191: error: cannot find symbol
	public float react(String attack_name) throws AttackNotFoundException, IOException
	                                              ^
  symbol:   class AttackNotFoundException
  location: class Player
./ifaces/IFighter.java:8: error: cannot find symbol
	public float attack(String attack) throws IOException, AttackNotFoundException;
	                                                       ^
  symbol:   class AttackNotFoundException
  location: interface IFighter
./ifaces/IFighter.java:9: error: cannot find symbol
	public float react(String attack) throws IOException, AttackNotFoundException;
	                                                      ^
  symbol:   class AttackNotFoundException
  location: interface IFighter
./impl/PlayerBuilder.java:3: error: cannot find symbol
public class PlayerBuilder implements IPlayerBuilder
                                      ^
  symbol: class IPlayerBuilder
./impl/Player.java:159: error: cannot find symbol
			throw new AttackNotFoundException("Attack not found in '" + db.getRoot() + "'");
			          ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/Player.java:180: error: cannot find symbol
			catch(IOException | AttackNotFoundException e)
			                    ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/Player.java:188: error: cannot find symbol
			throw new AttackNotFoundException("No such attack '" + attack_name + "' in player's list of attacks");
			          ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/Player.java:204: error: cannot find symbol
		catch(AttackNotFoundException | IOException e)
		      ^
  symbol:   class AttackNotFoundException
  location: class Player
./impl/PlayerBuilder.java:19: error: method does not override or implement a method from a supertype
	@Override
	^
./impl/PlayerBuilder.java:25: error: method does not override or implement a method from a supertype
	@Override
	^
./impl/PlayerBuilder.java:36: error: method addItem in class Player cannot be applied to given types;
			this.player.addItem(item_name);
			           ^
  required: IItem
  found: String
  reason: actual argument String cannot be converted to IItem by method invocation conversion
./impl/PlayerBuilder.java:32: error: method does not override or implement a method from a supertype
	@Override
	^
14 errors
